--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 html, body {
     background-color:lightblue;
   }
+
+  nav{
+  background-color: steelblue;
+  }
+ 
+
+  main{
+    background-color: rgb(84, 156, 192);
+  }
+
+  #myheader{
+background-color: aliceblue;
+color: black;
+padding: 40px;
+text-align: center;
+  }
