--- a/style.css
+++ b/style.css
@@ -3,47 +3,35 @@ html, body {
   }
 
   nav{
-  background-color: steelblue;
-  }
- 
+    background-color: steelblue;
+    }
+   
+  
+    main{
+      background-color: rgb(84, 156, 192);
+    }
+  
+    a{
+      color:white;
+    }
+  
 
-  main{
-    background-color: rgb(84, 156, 192);
-  }
-
-  #myheader{
-background-color: aliceblue;
-color: black;
-padding: 40px;
-text-align: center;
-  }
-
-  a{
-    color:white;
-  }
-
-  .container{
-    display:grid;
-    grid-template-columns: auto auto auto;
-  }
-
-  .container div.navbar {
+  .container {
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr ;
-    gap: 3px;
-    background-color: rgb(14, 67, 120);
+    grid-template-columns: 1fr 2fr 1fr;
+    background-color: rgb(14, 73, 132);
     padding: 5px;
+    gap: 5px;  
   }
-
-  .container div.information {
-  grid-template-columns: 1fr, 1fr, 1fr;
+  .container div {
+    background-color: #000235;
+    color: #000;
+    padding: 10px;
+    font-size: 30px;
+    text-align: center;
   }
-
-  .container div.list {
-grid-template-columns: 3fr, 3fr, 3fr;
-  gap: 3px;
-  background-color: rgb(14, 67, 120);
-  padding: 5px;
-  }
- 
-
+  
+  
+  
+  
+  
